syntax = "proto3";

import "gender.proto";
import "google/protobuf/timestamp.proto";

package services;
option go_package="./services";

service Calculator {
    rpc Hello(HelloRequest) returns(HelloResponse);
    rpc Fibonacci(FibonacciRequest) returns(stream FibonacciResponse);
    rpc Average(stream AverageRequest) returns(AverageResponse);
    rpc Sum(stream SumRequest) returns(stream SumResponse);
}

message HelloRequest {
    string name = 1;
    // reserved 1;
    // reserved "name";
    google.protobuf.Timestamp created_date = 2;
}

message HelloResponse {
    string result = 1;
}

message Person {
    string name = 1;
    int32 age = 2;
    float weight = 3;
    double height = 4;
    bool active = 5;
    repeated string phone_number = 6;
    Gender gender = 7;
    map<string, string> contries = 8;
    google.protobuf.Timestamp created_date = 9;
}

message FibonacciRequest {
    uint32 n = 1;
}

message FibonacciResponse {
    uint32 result = 1;
}

message AverageRequest {
    double number = 1;
}

message AverageResponse {
    double result = 1;
}

message SumRequest {
    int32 number = 1;
}

message SumResponse {
    int32 result = 1;
}
